acomode el input

--- a/CSS/Proyecto-Youtube/Proyecto-Youtube/index.html
+++ b/CSS/Proyecto-Youtube/Proyecto-Youtube/index.html
@@ -49,18 +49,14 @@
                 <!--Barra de busqueda-->
                 <div id="barra_debusqueda">
                     <!--Buscador-->
-                    <div>
                         <input id="input1" type="text" placeholder="Busca aqui">
                         <img id="Lupa" src="./Imagenes/Lupa.png" alt="Icono Lupa">
-                    </div>
                     <!--Buscador de Voz-->
-                    <div>
                             <img id="VoiceSearch" src="./Imagenes/VoiceSearch.png" alt="Microfono">
-                        </a>
                     </div>
                 </div>
                 <!--Acciones de usuario-->
-                <div>
+                <div id="treslogosfinales">
                     <!--Subir Video-->
                     <a href="https://www.youtube.com/upload">
                         <img src="./Imagenes/SubirVideo.png" alt="Upload">
